src/css/page.less
@import "values";

//NAV
nav.top-bar {
  border-bottom: 1px solid @gray;

  @media @mobile {
    height: 40px;
    width: 100%;
  }

  .logo {
    position: relative;
    top: 30px;
    text-align: center;
    display: block;

    @media @mobile {
      top: 20px;
    }

    img {
      box-sizing: content-box;
      height: 30px;
      background: white;
      padding: 10px;

      @media @mobile {
        padding: 5px;
      }
    }
  }
}

body {
  font-family: @body;
  font-size: 18px;
  max-width: 1200px;
  margin: auto;
  padding: 10px;

  @media @break {
    font-size: 16px;
    padding: 0;
  }
}

header {
  text-align: center;
  padding: 27px 5px 5px;
  margin: 0 auto;
  max-width: 840px;

  @media @tablet {
    padding-left: 8px;
    padding-right: 5px;
  }

  .title {
    color: @red;
  }

  .chatter {

    a {
      color: inherit;
      border-bottom: 1px dotted @red;

      &:hover {
        border-bottom: 2px solid @red;
      }
    }

    .share-button {
      display: inline-block !important;

      &.sharer-0 label {
        color: @df-dark-gray !important;
        background: @df-light-gray !important;
        padding: 6px 10px !important;
        border-radius: 0 !important;
        margin-left: 2px;

        &:hover {
          background: @df-border-gray !important;
          color: @df-charcoal !important;
        }
      }
    }
  }
}

// GLOBAL TITLE AND CHATTER STYLES
.title {
  font-family: @special;
  text-transform: uppercase;
  text-align: center;
  font-weight: 700;
  font-size: 3em;
  line-height: 1.2em;
  margin: 5px auto;

  @media @mobile {
    font-size: 2.5em;
    line-height: 1em;
    margin-bottom: 0;
  }
}

.chatter {
  color: @dark-gray;
  text-align: center;
  font-size: 1.2em;
  font-weight: 600;
  margin: 0.5em auto 1em;
}

.quiz-container {
  width: 840px;
  margin: auto;

  @media @break {
    width: 100%;
  }
}

.video-wrapper {
  width: 100%;
  margin: auto;
}

.video {
  width: 100%;
  height: 0;
  padding-bottom: percentage(9/16);
  position: relative;

  iframe {
    position: absolute;
    border: none;
    width: 100%;
    height: 100%;
  }
}

.divider {
  border: 4px solid @df-border-gray;
}

button {
  font-family: @block;
  font-weight: 600;
  text-transform: uppercase;
  cursor: default;
  color: white;
  border: none;
  padding: 4px 10px;
  font-size: 0.9em;
  -webkit-font-smoothing: antialiased;
  transition: background 0.2s linear;

  @media @break {
    padding: 8px 20px 10px 20px;
  }

  &.active {
    background: @df-blue;
    cursor: pointer;
    
    &:hover {
      background: darken(@df-blue, 10%);
    }
  }
}

.credits {
  font-size: 0.8em;
  text-align: center;
  padding: 15px;
  margin-bottom: 2em;

  .credit {
    white-space: nowrap;

    .credit-name {
      font-weight: 700;
    }
  }
}

.ad {
  width: 750px;
  margin: 0 auto;

  @media @break {
    display: none;
  }
}

